; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/block/extr_cfq-iosched.c_cfq_add_cfqq_rr.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/block/extr_cfq-iosched.c_cfq_add_cfqq_rr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cfq_data = type { i32 }
%struct.cfq_queue = type { i32 }

@.str = private unnamed_addr constant [10 x i8] c"add_to_rr\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.cfq_data*, %struct.cfq_queue*)* @cfq_add_cfqq_rr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @cfq_add_cfqq_rr(%struct.cfq_data* %0, %struct.cfq_queue* %1) #0 {
  %3 = alloca %struct.cfq_data*, align 8
  %4 = alloca %struct.cfq_queue*, align 8
  store %struct.cfq_data* %0, %struct.cfq_data** %3, align 8
  store %struct.cfq_queue* %1, %struct.cfq_queue** %4, align 8
  %5 = load %struct.cfq_data*, %struct.cfq_data** %3, align 8
  %6 = load %struct.cfq_queue*, %struct.cfq_queue** %4, align 8
  %7 = call i32 @cfq_log_cfqq(%struct.cfq_data* %5, %struct.cfq_queue* %6, i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str, i64 0, i64 0))
  %8 = load %struct.cfq_queue*, %struct.cfq_queue** %4, align 8
  %9 = call i32 @cfq_cfqq_on_rr(%struct.cfq_queue* %8)
  %10 = call i32 @BUG_ON(i32 %9)
  %11 = load %struct.cfq_queue*, %struct.cfq_queue** %4, align 8
  %12 = call i32 @cfq_mark_cfqq_on_rr(%struct.cfq_queue* %11)
  %13 = load %struct.cfq_data*, %struct.cfq_data** %3, align 8
  %14 = getelementptr inbounds %struct.cfq_data, %struct.cfq_data* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = add nsw i32 %15, 1
  store i32 %16, i32* %14, align 4
  %17 = load %struct.cfq_data*, %struct.cfq_data** %3, align 8
  %18 = load %struct.cfq_queue*, %struct.cfq_queue** %4, align 8
  %19 = call i32 @cfq_resort_rr_list(%struct.cfq_data* %17, %struct.cfq_queue* %18)
  ret void
}

declare dso_local i32 @cfq_log_cfqq(%struct.cfq_data*, %struct.cfq_queue*, i8*) #1

declare dso_local i32 @BUG_ON(i32) #1

declare dso_local i32 @cfq_cfqq_on_rr(%struct.cfq_queue*) #1

declare dso_local i32 @cfq_mark_cfqq_on_rr(%struct.cfq_queue*) #1

declare dso_local i32 @cfq_resort_rr_list(%struct.cfq_data*, %struct.cfq_queue*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
